# isolate-knowledge-updates-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: README.md
logs/: execution_codex_transcript.jsonl  paper_writer_prompt.txt  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
paper/: OUTLINE.md
paper_draft/: main.aux  main.bbl  main.blg  main.tex  references.bib
paper_draft/commands/: general.tex  macros.tex
paper_draft/sections/: abstract.tex  conclusion.tex  discussion.tex  introduction.tex  methodology.tex  related_work.tex  results.tex
paper_draft/tables/: main_results.tex
papers/: 2206.06520_SERAC_page1.txt  2305.13172_EditingLLMs_page1.txt  2401.01286_KnowledgeEditingSurvey_page1.txt  README.md
papers/pages/MEMIT/: 2210.07229_MEMIT_chunk_001.txt  2210.07229_MEMIT_chunk_002.txt  2210.07229_MEMIT_chunk_003.txt  2210.07229_MEMIT_chunk_004.txt  2210.07229_MEMIT_chunk_005.txt  2210.07229_MEMIT_chunk_006.txt  2210.07229_MEMIT_chunk_007.txt  2210.07229_MEMIT_manifest.txt
papers/pages/MEND/: 2110.11309_MEND_chunk_001.txt  2110.11309_MEND_chunk_002.txt  (+6 more)
results/: analysis_summary.json  metrics.json  paraphrases.json
results/outputs/: baseline_outputs.json  full_finetune_outputs.json  lora_edit_outputs.json  regularized_outputs.json
src/: analyze_results.py  api_paraphrases.py  run_experiments.py
(+15 files in other folders)
